src/pages/auth/components/authFooter/authFooter.style.css
.auth-footer-other-links {
  margin: 0;
}

.auth-footer-other-link {
  display: inline-block;
  font-size: 0.9rem;
  color: var(--text-color);
  text-decoration: none;
  transition: color 0.2s;
  margin-block: 0.4rem;
  cursor: pointer;
}

.auth-footer-other-link:hover {
  color: var(--primary-color);
}

.auth-footer-actions {
  display: flex;
  justify-content: center;
  gap: 0.5rem;
  margin-top: 5px;
}

.auth-footer-action-btn {
  padding: 0.4rem 0.8rem;
  width: 80px;
  background-color: var(--bg-color);
  color: var(--text-color);
  border: 1px solid var(--text-color);
  border-radius: 999px;
  font-size: 0.85rem;
  cursor: pointer;
  transition: background-color 0.2s, color 0.2s, border-color 0.2s;
}

.auth-footer-action-btn:hover {
  background-color: var(--primary-color);
  color: #fff;
  border-color: var(--primary-color);
}

